<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="preTipAmount">Pre-tip Amount</string>
    <string name="splitOver">Split By</string>
    <string name="tipPercentage">Tip Percentage</string>
    <string name="totalAmount">Total Amount</string>
    <string name="dollarSign">$</string>
    <string name="percentageSign">%</string>
    <string name="people">People</string>
    <string name="option1">10%</string>
    <string name="option2">15%</string>
    <string name="option3">20%</string>
    <string name="option4">Custom Amount</string>
    
    <string-array name="tipPercentages">
        <item>10%</item>
        <item>15%</item>
        <item>20%</item>
        <item>Custom</item>
    </string-array>

</resources>
